Improve Japanese translation

--- a/index-ja.html
+++ b/index-ja.html
@@ -72,7 +72,7 @@
            goal of LXC is to create an environment as close as possible as a
            standard Linux installation but without the need for a separate
            kernel. -->
-           LXC はよく強力な chroot と本格的な仮想マシンの中間のようなもののように見なされる事が多いです．
+           LXC はよく強力な chroot と本格的な仮想マシンの中間のようなもののように見なされます．
            LXC の目的は，可能な限り標準的な Linux のインストール環境に近く，しかし別々のカーネルは必要ないような環境を作ることです．
          </p>
 
