Fixed lack subtitle "Licensing"
Signed-off-by: Kouhei Maeda <mkouhei@palmtb.net>

--- a/index-ja.html
+++ b/index-ja.html
@@ -94,7 +94,7 @@
          </ul>
          </p>
 
-         <h3><!-- Licensing --></h3>
+         <h3><!-- Licensing -->ライセンス</h3>
          <p><!-- LXC is free software, most of the code is released under the
             terms of the GNU LGPLv2.1+ license, some Android compatibility bits
             are released under a standard 2-clause BSD license and some
