Fixed proper noun of "GitHub"
Signed-off-by: Kouhei Maeda <mkouhei@palmtb.net>

--- a/index-ja.html
+++ b/index-ja.html
@@ -109,7 +109,7 @@
             <a href="/downloads/">here</a>
             or grab it directly from git
             <a href="http://github.com/lxc/lxc">here</a> or with: -->
-            最新のアーカイヴは <a href="/downloads/">ここ</a> から取得可能です．また，最新の開発版を直接 git で <a href="http://github.com/lxc/lxc">github サイト</a> から，もしくは以下のように git コマンドで取得する事も可能です．
+            最新のアーカイヴは <a href="/downloads/">ここ</a> から取得可能です．また，最新の開発版を直接 git で <a href="http://github.com/lxc/lxc">GitHub のサイト</a> から，もしくは以下のように git コマンドで取得する事も可能です．
          </p>
 
          <pre>
